New photo + writing through lead item

--- a/2025/2025-08-24-wir.md
+++ b/2025/2025-08-24-wir.md
@@ -1,8 +1,8 @@
 # TKTK
 ## TKTKTK
 
-![File photo of VC Marc Andreessen speaking at the TechCrunch Disrupt conference in 2016](https://upload.wikimedia.org/wikipedia/commons/e/ee/TechCrunch_Disrupt_SF_2016_-_Day_2.jpg)
-*File photo of venture investor Marc Andreessen speaking at TechCrunch Disrupt in 2016. Unedited photo by Steve Jennings via Wikimedia Commons under CC 2.0 [license](https://creativecommons.org/licenses/by/2.0/deed.en).*
+![](https://upload.wikimedia.org/wikipedia/commons/7/7f/Intel_CEOs_Gordon_Moore_Craig_Barrett_Andy_Grove_Paul_Otellini_%288575080529%29.jpg)
+*Intel's four CEOs from 1975 to 2013, photographed at a company event in 2003. From left, Gordon Moore, Craig Barrett, Andy Grove, and Paul Otellini. Founding CEO Robert Noyce, who died in 1990, is not pictured. Unedited photo courtesy of Intel via Wikimedia Commons under CC 2.0 [license](https://creativecommons.org/licenses/by/2.0/deed.en).*
 
 <hr>
 
@@ -14,27 +14,32 @@
 
 <hr>
 
-**Lead item goes here.** Yadda yadda yadda.
+**There have been some surprising twists lately** in how tech companies get funded, which investors have access, and who benefits. Over time, the implications could be massive both for privately held startups and listed Big Tech stalwarts alike.
 
-- Digital asset treasuries' growth is outpacing VC investment lately. Wow. https://www.theblock.co/post/367485/digital-asset-treasuries-eclipse-venture-funding-as-companies-raise-15-billion-in-2025
+At the startup-y end of the spectrum, The Block reports that crypto companies have [raised over $15 billion](https://www.theblock.co/post/367485/digital-asset-treasuries-eclipse-venture-funding-as-companies-raise-15-billion-in-2025) this year through digital-asset treasuries, outpacing traditional investment rounds by venture capital firms. The volume of traditional VC deals with crypto startups has plunged 56% so far this year.
 
-- BitMine Adds $1.7 Billion in Ethereum, Now Second Behind Strategy in Crypto Treasury Rankings. https://decrypt.co/335613/bitmine-adds-1-7-billion-ethereum-second-strategy-crypto-treasury
-- Companies have raised over $15 billion in digital-asset treasuries through August 2025, marking a pivotal shift as this strategy now outpaces traditional crypto venture funding—which has seen deal volume nearly halve compared to last year—underscoring the growing corporate embrace of crypto holdings as strategic assets. ([The Block](https://www.theblock.co/post/367485/digital-asset-treasuries-eclipse-venture-funding-as-companies-raise-15-billion-in-2025)) <!-- Draft news summary by ChatGPT -->
+Some background: The listed business-services firm Strategy pioneered digital-asset treasuries in 2020, when it began acquiring bitcoin as an alternative to holding traditional dollar deposits and U.S. Treasury debt in its corporate cash reserve. As bitcoin's token price has generally risen over the years, Strategy's stock-market valuation has as well, based increasingly on the amount of bitcoin on its books.  
 
-- BitMine Immersion Technologies sharply expanded its Ethereum reserves last week by acquiring around 373,000 ETH (≈ $1.7 billion), bringing its total to over $6.6 billion—more than 1 percent of all ETH in circulation—and cementing its place as the second-largest crypto treasury by this metric. ([Decrypt](https://decrypt.co/335613/bitmine-adds-1-7-billion-ethereum-second-strategy-crypto-treasury)) <!-- Draft news summary by ChatGPT -->
+For Strategy, which was founded in 1989 under the monicker MicroStrategy, adopting bitcoin in 2020 was a big pivot at a time when the company was already pretty mature, after it had built up a conventional business generating income from clients.
 
-- https://www.theblock.co/post/367749/ethereum-treasuries-surpass-17-billion
-- The combined Ethereum holdings of 69 treasury entities now surpass 4.1 million ETH, valued at approximately $17–17.6 billion, highlighting the accelerating accumulation of ETH by institutional and corporate treasuries. ([The Block](https://www.theblock.co/post/367749/ethereum-treasuries-surpass-17-billion)) <!-- Draft news summary by ChatGPT -->
+By contrast, startups have been recently building *from scratch* as digital-asset treasury (DAT) companies. In many cases, that's meant raising money to build their token stockpiles from zero, with no other revenue streams in place. Hence this is where tokenized treasuries have begun to compete more directly with the old-school VC business.
 
-- https://decrypt.co/336128/silicon-valley-throws-100m-at-ai-powered-mattress-with-a-subscription
-- Silicon Valley investors have poured $100 million into a luxury, AI-enhanced mattress system—starting at $2,500 for the topper and more than $4,000 for the full setup—paired with a $17–$25 monthly subscription for extra features, with high-profile users like Elon Musk, Mark Zuckerberg, Scarlett Johansson, and biohacker Bryan Johnson fueling its hype and a rumored $500 million valuation. ([Decrypt](https://decrypt.co/336128/silicon-valley-throws-100m-at-ai-powered-mattress-with-a-subscription))
+Other aspects of this trend to watch:
 
+- **Bitcoin remains by far** the most popular treasury asset among companies for now. But ether and various altcoins have been making inroads. The combined ETH holdings of 69 digital-asset treasury (DAT) entities now surpass $17 billion, according to [The Block](https://www.theblock.co/post/367749/ethereum-treasuries-surpass-17-billion).
 
-- **Tech deals on the way?** OpenAI is in final talks to facilitate a $6 billion secondary share sale by employees and former staffers to investors such as SoftBank and Thrive Capital—potentially catapulting the company’s valuation to $500 billion, making it the most valuable private firm globally—surpassing even SpaceX. ([New York Times](https://www.nytimes.com/2025/08/19/technology/openai-chatgpt-stock-sale-valuation.html)) <!-- Draft news summary by ChatGPT --> | The White House is considering taking a 10% stake in Intel. SoftBank is eyeing a bid as well. <!-- Check for followups. Links tk. -->
+- **Case in point:** Former BTC miner BitMine Immersion Technologies just announced an [expansion of its ETH reserve](https://decrypt.co/335613/bitmine-adds-1-7-billion-ethereum-second-strategy-crypto-treasury) to $6.6 billion, more than 1% percent of all ETH tokens in circulation. That now makes it the second-largest DAT company, behind only Strategy.
 
+- **Forbes' Julie Goldenberg** notes that a lot of "picks-and-shovels" financial firms providing services to DAT companies are [racking up big profits](https://www.forbes.com/sites/juliegoldenberg/2025/08/19/whos-getting-rich-off-the-100-billion-crypto-treasury-boom/) from the boom. These include various crypto custodians, brokers, asset managers and investment banks.
 
-- https://www.forbes.com/sites/juliegoldenberg/2025/08/19/whos-getting-rich-off-the-100-billion-crypto-treasury-boom/
-- The real winners in the soaring $100 billion crypto treasury boom aren’t the projects themselves but the "picks‑and‑shovels" businesses—custodians, brokers, and asset managers—who stand to reap the bulk of profit from institutional crypto treasury activity. ([Forbes](https://www.forbes.com/sites/juliegoldenberg/2025/08/19/whos-getting-rich-off-the-100-billion-crypto-treasury-boom/)) <!-- Draft news summary by ChatGPT -->
+- **Many conventional VCs** have of course turned their attention to AI of late.
+
+investments is still robust.
+
+Silicon Valley investors have poured $100 million into a luxury, AI-enhanced mattress system—starting at $2,500 for the topper and more than $4,000 for the full setup—paired with a $17–$25 monthly subscription for extra features, with high-profile users like Elon Musk, Mark Zuckerberg, Scarlett Johansson, and biohacker Bryan Johnson fueling its hype and a rumored $500 million valuation. ([Decrypt](https://decrypt.co/336128/silicon-valley-throws-100m-at-ai-powered-mattress-with-a-subscription)) | OpenAI is in final talks to facilitate a $6 billion secondary share sale by employees and former staffers to investors such as SoftBank and Thrive Capital—potentially catapulting the company’s valuation to $500 billion, making it the most valuable private firm globally—surpassing even SpaceX. ([New York Times](https://www.nytimes.com/2025/08/19/technology/openai-chatgpt-stock-sale-valuation.html)) <!-- Draft news summary by ChatGPT -->
+
+The White House is considering taking a 10% stake in Intel. SoftBank is eyeing a bid as well. <!-- Check for followups. Links tk. -->
+
 
 ### Five Things: Aug. 17-23, 2025
 
@@ -110,7 +115,7 @@
 
 - **Mental health pros are growing concerned about "AI psychosis."** While the term isn't yet a formal clinical diagnosis, it's increasingly being used to describe alarming patterns of delusional thinking, emotional dependency, and distorted reality emerging in some users after extended interaction with chatbots. ([Washington Post](https://www.washingtonpost.com/health/2025/08/19/ai-psychosis-chatgpt-explained-mental-health/))
 
-- **Google’s unveiled** its [new lineup](https://www.wired.com/story/google-pixel-10-series-pixel-watch-4-pixel-buds-2a/) of Pixel devices, emphasizing [AI features](https://www.cnbc.com/2025/08/21/google-pixel-10-launch-a-strategic-ai-play-with-gemini.html) to take on Apple's iPhone more directly. Early reviews have generally ben [favorable](https://www.androidcentral.com/phones/google-pixel/google-pixel-10-hands-on). Nevertheless, the Washington Post's Shira Ovide says Google faces an uphill battle for market share. From its early launch, the search giant has positioned the Pixel line as an Android flagship. But Ovide notes that historically [hasn't translated](https://www.washingtonpost.com/technology/2025/08/19/best-android-phone-google-pixel-apple-samsung/) into strong sales.
+- **Google unveiled** its [new lineup](https://www.wired.com/story/google-pixel-10-series-pixel-watch-4-pixel-buds-2a/) of Pixel devices, emphasizing [AI features](https://www.cnbc.com/2025/08/21/google-pixel-10-launch-a-strategic-ai-play-with-gemini.html) to take on Apple's iPhone more directly. Early reviews have generally been [favorable](https://www.androidcentral.com/phones/google-pixel/google-pixel-10-hands-on). Nevertheless, the Washington Post's Shira Ovide says Google faces an uphill battle for market share. Since the Pixel's initial early launch, the search giant has positioned the line as an Android flagship. But Ovide notes that historically [hasn't translated](https://www.washingtonpost.com/technology/2025/08/19/best-android-phone-google-pixel-apple-samsung/) into strong sales.
 
 ### Odds & Ends
 
