Adding final headline + subhed, with help from ChatGPT

--- a/2025/2025-08-24-wir.md
+++ b/2025/2025-08-24-wir.md
@@ -1,7 +1,7 @@
-# TKTK
-## TKTKTK
+# Tech’s money machine is evolving
+## For better or worse, crypto treasuries and Uncle Sam are transforming Silicon Valley's funding landscape radically.
 
-![](https://upload.wikimedia.org/wikipedia/commons/7/7f/Intel_CEOs_Gordon_Moore_Craig_Barrett_Andy_Grove_Paul_Otellini_%288575080529%29.jpg)
+![Intel's four CEOs from 1975 to 2013, photographed at a company event in 2003.](https://upload.wikimedia.org/wikipedia/commons/7/7f/Intel_CEOs_Gordon_Moore_Craig_Barrett_Andy_Grove_Paul_Otellini_%288575080529%29.jpg)
 *Intel's four CEOs from 1975 to 2013, photographed at a company event in 2003. From left, Gordon Moore, Craig Barrett, Andy Grove, and Paul Otellini. Founding CEO Robert Noyce, who died in 1990, is not pictured. Unedited photo courtesy of Intel via Wikimedia Commons under CC 2.0 [license](https://creativecommons.org/licenses/by/2.0/deed.en).*
 
 <hr>
