Edits to news summaries

--- a/2025/2025-08-31-wir.md
+++ b/2025/2025-08-31-wir.md
@@ -20,13 +20,15 @@
 
 *The week's top headlines about emerging technologies and trends reshaping the web:*
 
+
+- Elon Musk's xAI has filed an antitrust lawsuit against Apple and OpenAI, alleging that the two companies are teaming up to stifle competition in the artificial intelligence market by favoring OpenAI's ChatGPT over other AI apps. The lawsuit claims that Apple's partnership with OpenAI has given the company an unfair advantage, allowing it to collect valuable data from iPhone users and potentially threatening the future of the iPhone. ([Associated Press](https://apnews.com/article/elon-musk-apple-openai-chatgpt-8cc360bd419894ad8c6bfdd79eb5693f)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
+
 - If you’ve ever wanted to hop between decentralized networks without losing followers, a new tool called Bounce just made it possible. It connects Bluesky and Mastodon accounts, smoothing over one of the biggest frictions in the Fediverse. ([TechCrunch](https://techcrunch.com/2025/08/25/bounce-launches-a-service-for-moving-accounts-between-bluesky-and-mastodon/)) <!-- Draft news summary by ChatGPT -->
 
 - EV Batteries Break Out of the Lithium Box: Startups are chasing alternative chemistries like sodium and sulfur in hopes of cutting costs and easing dependence on China, which still controls 85% of cell production and nearly all raw-material processing. It’s a fascinating snapshot of how the EV industry’s future could hinge on something as small as an ion. ([Reuters](https://www.reuters.com/business/media-telecom/factbox-competing-battery-technologies-shape-ev-industry-2025-08-25/)) <!-- Draft news summary by ChatGPT -->
 
 - President Trump continues to extend the deadline for a U.S. ban on TikTok, citing concerns over national security and privacy as "highly overrated" and stating that he's waiting for a buyer to finalize a deal. Despite the ongoing uncertainty, a recent Pew Research Center survey found that support for a TikTok ban has decreased, with only about one-third of Americans now in favor of banning the social media platform. ([Associated Press](https://apnews.com/article/trump-tiktok-china-extension-deadline-4a66fbd0e485db5b3da83c176f22ad11)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
 
-- Elon Musk's xAI has filed an antitrust lawsuit against Apple and OpenAI, alleging that the two companies are teaming up to stifle competition in the artificial intelligence market by favoring OpenAI's ChatGPT over other AI apps. The lawsuit claims that Apple's partnership with OpenAI has given the company an unfair advantage, allowing it to collect valuable data from iPhone users and potentially threatening the future of the iPhone. ([Associated Press](https://apnews.com/article/elon-musk-apple-openai-chatgpt-8cc360bd419894ad8c6bfdd79eb5693f)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
 
 - TK ([]())
 
@@ -87,13 +89,23 @@
 ### Looking Ahead
 
 - tk ([]())
+
 - tk ([]())
-- tk ([]())
+
+- **Marketing guru Seth Godin** is [optimistic](https://seths.blog/2025/08/job-churn/) about AI's potential effect on employment.
 
 ### Odds & Ends
 
+- Falling Water preservation ([Washington Post](https://www.washingtonpost.com/home/2025/08/25/fallingwater-renovation-project-leaking/))
+
 - tk ([]())
-- tk ([]())
+
+<!--
+
+- Employee who ran an SC Burger King solo gets fired because she couldn't line up child care.
+https://www.washingtonpost.com/business/2025/08/25/burger-king-worker-nykia-hamilton-fired-childcare/
+
+-->
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to know more about w3w's history and (ahem) the author, that info is available [here](https://w3wnews.substack.com/about).**_
 
