New header image + writing through all sections

--- a/2025/2025-08-31-wir.md
+++ b/2025/2025-08-31-wir.md
@@ -1,8 +1,8 @@
 # TKTK
 ## TKTK
 
-![Intel's four CEOs from 1975 to 2013, photographed at a company event in 2003.](https://upload.wikimedia.org/wikipedia/commons/7/7f/Intel_CEOs_Gordon_Moore_Craig_Barrett_Andy_Grove_Paul_Otellini_%288575080529%29.jpg)
-*Intel's four CEOs from 1975 to 2013, photographed at a company event in 2003. Unedited photo courtesy of Intel via Wikimedia Commons under CC 2.0 [license](https://creativecommons.org/licenses/by/2.0/deed.en).*
+![Stock photo of a man walking by a sign reading "no jobs"](https://w3w.news/img/hennie-stander-unsplash-3000.jpg)
+*Photo by [Hennie Stander](https://unsplash.com/@henniestander) via Unsplash.*
 
 <hr>
 
@@ -16,21 +16,51 @@
 
 **Lead item goes here.** yadda yadda yadda.
 
+<!-- Riff on AI's potential effect on employment using an ad-hoc pro/con -->
+
+- **Marketing guru Seth Godin** is [optimistic](https://seths.blog/2025/08/job-churn/) about AI's potential effect on employment.
+
+- <!-- TK rant-y link from HR recruiter guy on "psychotic" corporations. Part about AI starts about 12-13 mins in. --> https://www.youtube.com/watch?v=T1WAq2xoLfE&t=908s
+
+Signs of the psychosis...
+
+- Employee who ran an SC Burger King solo gets fired because she couldn't line up child care.
+https://www.washingtonpost.com/business/2025/08/25/burger-king-worker-nykia-hamilton-fired-childcare/
+
+- Google has eliminated 35% of managers of small teams: https://www.cnbc.com/2025/08/27/google-executive-says-company-has-cut-a-third-of-its-managers.html
+
+<!-- Perhaps end with note that these guys are both tech-savvy in their way, but they're not engineers. -->
+
+
 ### Five Things: Aug. 24-30, 2025
 
 *The week's top headlines about emerging technologies and trends reshaping the web:*
 
+- Nvidia earnings ([Axios](https://www.axios.com/2025/08/27/nvidia-earnings-revenue-jensen-huang)) <!--
+Other AI earnings-related stuff, announcements. Could be fodder for a combo item, if time/space allow: Intel warns US stake could hurt international sales, future grants. Reuters https://www.reuters.com/world/china/intel-warns-us-stake-could-hurt-international-sales-future-grants-2025-08-25/ |  MongoDB shares leapt on signs it's making headway in AI. https://www.fool.com/investing/2025/08/27/why-mongodb-stock-skyrocketed-higher-wednesday-mor/ | GlobalFoundries says its CHIPS Act funding is intact, doesn't involve equity. https://news.google.com/read/CBMiuwFBVV95cUxNVHJFNEhOd0N1Y3Z4TVZPOVhGaW94NXZ5elE0VlR4X2RpeC11eGM4UlpyZWJBZnVvV3NSU3NxclRkS3JVZmdvOHZyUXpYdlJrMTRBNU9zZmhiZWF0bF85S0JRTDRDNjE1Qk9kSlB0bGJZUVpwdlNqeFd3aGJrdTFXNktEM1BSb2NPVTJTUk9hZnJacVVmUERDNzF5SWJuWGdfRXQ0NFpSbXhwTExyRkdrWGtZTzdieThKY0lZ?hl=en-US&gl=US&ceid=US%3Aen -->
 
-- Elon Musk's xAI has filed an antitrust lawsuit against Apple and OpenAI, alleging that the two companies are teaming up to stifle competition in the artificial intelligence market by favoring OpenAI's ChatGPT over other AI apps. The lawsuit claims that Apple's partnership with OpenAI has given the company an unfair advantage, allowing it to collect valuable data from iPhone users and potentially threatening the future of the iPhone. ([Associated Press](https://apnews.com/article/elon-musk-apple-openai-chatgpt-8cc360bd419894ad8c6bfdd79eb5693f)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
+- Elon Musk's xAI has filed an antitrust lawsuit against Apple and OpenAI, alleging that the two companies are teaming up to stifle competition in the artificial intelligence market by favoring OpenAI's ChatGPT over other AI apps. The lawsuit claims that Apple's partnership with OpenAI has given the company an unfair advantage, allowing it to collect valuable data from iPhone users and potentially threatening the future of the iPhone. ([Associated Press](https://apnews.com/article/elon-musk-apple-openai-chatgpt-8cc360bd419894ad8c6bfdd79eb5693f)) <!-- Draft news summary by Leo/Llama 3.1 8B --> <!-- Possible combo link: Anthropic launches new AI agent for Chrome: https://techcrunch.com/2025/08/26/anthropic-launches-a-claude-ai-agent-that-lives-in-chrome/ -->
 
-- If you’ve ever wanted to hop between decentralized networks without losing followers, a new tool called Bounce just made it possible. It connects Bluesky and Mastodon accounts, smoothing over one of the biggest frictions in the Fediverse. ([TechCrunch](https://techcrunch.com/2025/08/25/bounce-launches-a-service-for-moving-accounts-between-bluesky-and-mastodon/)) <!-- Draft news summary by ChatGPT -->
+- USDT is coming to the Bitcoin chain. ([Cryptonews](https://cryptonews.com/news/tether-stablecoin-usdt-coming-to-bitcoin-blockchain/))
 
-- EV Batteries Break Out of the Lithium Box: Startups are chasing alternative chemistries like sodium and sulfur in hopes of cutting costs and easing dependence on China, which still controls 85% of cell production and nearly all raw-material processing. It’s a fascinating snapshot of how the EV industry’s future could hinge on something as small as an ion. ([Reuters](https://www.reuters.com/business/media-telecom/factbox-competing-battery-technologies-shape-ev-industry-2025-08-25/)) <!-- Draft news summary by ChatGPT -->
+- Chainlink partnering with Commerce ([Blockworks](https://blockworks.co/news/chainlink-labs-commerce)) <!-- Combo candidates: **Washington Watch:** President Trump continues to extend the deadline for a U.S. ban on TikTok, citing concerns over national security and privacy as "highly overrated" and stating that he's waiting for a buyer to finalize a deal. Despite the ongoing uncertainty, a recent Pew Research Center survey found that support for a TikTok ban has decreased, with only about one-third of Americans now in favor of banning the social media platform. ([Associated Press](https://apnews.com/article/trump-tiktok-china-extension-deadline-4a66fbd0e485db5b3da83c176f22ad11))  Draft news summary by Leo/Llama 3.1 8B  | Trump Media and Crypto.com are building a CRO treasury. https://decrypt.co/337168/morning-minute-trump-family-expands-crypto-empire-with-cro | -->
 
-- President Trump continues to extend the deadline for a U.S. ban on TikTok, citing concerns over national security and privacy as "highly overrated" and stating that he's waiting for a buyer to finalize a deal. Despite the ongoing uncertainty, a recent Pew Research Center survey found that support for a TikTok ban has decreased, with only about one-third of Americans now in favor of banning the social media platform. ([Associated Press](https://apnews.com/article/trump-tiktok-china-extension-deadline-4a66fbd0e485db5b3da83c176f22ad11)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
+- **Fediverse:** If you’ve ever wanted to hop between decentralized networks without losing followers, a new tool called Bounce just made it possible. It connects Bluesky and Mastodon accounts, smoothing over one of the biggest frictions in the Fediverse. ([TechCrunch](https://techcrunch.com/2025/08/25/bounce-launches-a-service-for-moving-accounts-between-bluesky-and-mastodon/)) <!-- Draft news summary by ChatGPT -->
+
+<!--
+
+Leftovers...
+
+- Bloomberg: Biotech companies are piling into crypto treasuries.  Link TK
+
+- Gemini launches new Ripple-based card, expands Ripple USD availability. https://finance.yahoo.com/news/gemini-unveils-xrp-credit-card-163240671.html
 
 
-- TK ([]())
+- Peter Thiel-backed crypto stock ETHZilla crashes: https://www.thestreet.com/crypto/investing/peter-thiel-backed-stock-soars-then-crashes-on-shocking-news
+
+- BTC "flash crash"  Link TK
+
+-->
 
 ### Market Snapshot
 
@@ -88,24 +118,17 @@
 
 ### Looking Ahead
 
-- tk ([]())
+- WSJ article on Euorpean competitiveness and innovation, including an eye-popping factoid related to space exploration. ([Wall Street Journal]()) <!-- Link TK -->
 
-- tk ([]())
+- EV Batteries Break Out of the Lithium Box: Startups are chasing alternative chemistries like sodium and sulfur in hopes of cutting costs and easing dependence on China, which still controls 85% of cell production and nearly all raw-material processing. It’s a fascinating snapshot of how the EV industry’s future could hinge on something as small as an ion. ([Reuters](https://www.reuters.com/business/media-telecom/factbox-competing-battery-technologies-shape-ev-industry-2025-08-25/)) <!-- Draft news summary by ChatGPT -->
 
-- **Marketing guru Seth Godin** is [optimistic](https://seths.blog/2025/08/job-churn/) about AI's potential effect on employment.
+- The Phillipines is weighing whether to create a sovereign crypto reserve. ([CoinDesk](https://www.coindesk.com/policy/2025/08/25/philippine-congressman-proposes-bitcoin-reserve-to-attack-national-debt)) <!-- Check functionality of the link for free readers. Sub out if necessary. -->
 
 ### Odds & Ends
 
 - Falling Water preservation ([Washington Post](https://www.washingtonpost.com/home/2025/08/25/fallingwater-renovation-project-leaking/))
 
-- tk ([]())
-
-<!--
-
-- Employee who ran an SC Burger King solo gets fired because she couldn't line up child care.
-https://www.washingtonpost.com/business/2025/08/25/burger-king-worker-nykia-hamilton-fired-childcare/
-
--->
+- George Herman Ruth arrested for using baseball legends' names in fraud scheme. ([New York Post](https://nypost.com/2025/08/26/sports/babe-ruth-arrested-for-using-baseball-legends-names-in-fraud-scheme/))
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to know more about w3w's history and (ahem) the author, that info is available [here](https://w3wnews.substack.com/about).**_
 
