Writethrough by me + some draft summaries by Leo/Lllama 3.1 8B

--- a/2025/2025-08-31-wir.md
+++ b/2025/2025-08-31-wir.md
@@ -120,13 +120,14 @@ Leftovers...
 
 - WSJ article on Euorpean competitiveness and innovation, including an eye-popping factoid related to space exploration. ([Wall Street Journal]()) <!-- Link TK -->
 
-- EV Batteries Break Out of the Lithium Box: Startups are chasing alternative chemistries like sodium and sulfur in hopes of cutting costs and easing dependence on China, which still controls 85% of cell production and nearly all raw-material processing. It’s a fascinating snapshot of how the EV industry’s future could hinge on something as small as an ion. ([Reuters](https://www.reuters.com/business/media-telecom/factbox-competing-battery-technologies-shape-ev-industry-2025-08-25/)) <!-- Draft news summary by ChatGPT -->
+- **A congressman in the Phillipines** has introduced a bill proposing the country build a bitcoin reserve holding 10,000 tokens. ([Cryptonews](https://finance.yahoo.com/news/philippines-proposes-massive-10-000-172644985.html))
 
-- The Phillipines is weighing whether to create a sovereign crypto reserve. ([CoinDesk](https://www.coindesk.com/policy/2025/08/25/philippine-congressman-proposes-bitcoin-reserve-to-attack-national-debt)) <!-- Check functionality of the link for free readers. Sub out if necessary. -->
+- **Startups are racing to develop new batteries** using materials like sodium and sulfur as an alternative to the dominant lithium-ion devices that power electric vehicles and other electronics. The goal is to lower costs and reduce reliance on China, which dominates the lithium-ion market. ([Reuters](https://news.google.com/read/CBMitgFBVV95cUxPT2hWaEFkZDhnQy16YjJpZFFVSklTMXNLVW51VFdDSC05OU9FYURXNUZ6Z2hNc3V2Q2h5elJQODJFemthWFJ2ZV8taV9mWVlQd3RhZFMtTEtmN2JOS0UyV21FMDRBWnl5bnVEOGUxQWJXMjBoOUozWktramt1bTlaeDdGQXZYRV9sMG9WZ3lxSzNlQUhNU0RoQ1lRMC1xNF9vZG9WS0J1RHE0SlRmZnpSN2w5MjVfdw?hl=en-US&gl=US&ceid=US%3Aen))
+
 
 ### Odds & Ends
 
-- Falling Water preservation ([Washington Post](https://www.washingtonpost.com/home/2025/08/25/fallingwater-renovation-project-leaking/))
+- Fallingwater, a UNESCO World Heritage site and iconic masterpiece designed by Frank Lloyd Wright, is undergoing a $7 million renovation to replace roofs, repair walls, and restore windows, while adhering to strict historic preservation standards. The project aims to eliminate water infiltration challenges and preserve the home's delicate ecosystem, with renovations scheduled to be completed by spring 2026. ([Washington Post](https://www.washingtonpost.com/home/2025/08/25/fallingwater-renovation-project-leaking/)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
 
 - George Herman Ruth arrested for using baseball legends' names in fraud scheme. ([New York Post](https://nypost.com/2025/08/26/sports/babe-ruth-arrested-for-using-baseball-legends-names-in-fraud-scheme/))
 
