--- a/2025/2025-08-31-wir.md
+++ b/2025/2025-08-31-wir.md
@@ -36,31 +36,15 @@ https://www.washingtonpost.com/business/2025/08/25/burger-king-worker-nykia-hami
 
 *The week's top headlines about emerging technologies and trends reshaping the web:*
 
-- Nvidia earnings ([Axios](https://www.axios.com/2025/08/27/nvidia-earnings-revenue-jensen-huang)) <!--
-Other AI earnings-related stuff, announcements. Could be fodder for a combo item, if time/space allow: Intel warns US stake could hurt international sales, future grants. Reuters https://www.reuters.com/world/china/intel-warns-us-stake-could-hurt-international-sales-future-grants-2025-08-25/ |  MongoDB shares leapt on signs it's making headway in AI. https://www.fool.com/investing/2025/08/27/why-mongodb-stock-skyrocketed-higher-wednesday-mor/ | GlobalFoundries says its CHIPS Act funding is intact, doesn't involve equity. https://news.google.com/read/CBMiuwFBVV95cUxNVHJFNEhOd0N1Y3Z4TVZPOVhGaW94NXZ5elE0VlR4X2RpeC11eGM4UlpyZWJBZnVvV3NSU3NxclRkS3JVZmdvOHZyUXpYdlJrMTRBNU9zZmhiZWF0bF85S0JRTDRDNjE1Qk9kSlB0bGJZUVpwdlNqeFd3aGJrdTFXNktEM1BSb2NPVTJTUk9hZnJacVVmUERDNzF5SWJuWGdfRXQ0NFpSbXhwTExyRkdrWGtZTzdieThKY0lZ?hl=en-US&gl=US&ceid=US%3Aen -->
+- Nvidia's revenue saw significant growth, reaching $46.7 billion with a 56% increase from last year, driven by the booming AI economy. However, the company's sales forecast for the third quarter fell short of expectations, with a disappointing $54 billion projection, largely due to a halt in H20 chip sales to China amid ongoing trade tensions. ([Axios](https://www.axios.com/2025/08/27/nvidia-earnings-revenue-jensen-huang)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
 
-- Elon Musk's xAI has filed an antitrust lawsuit against Apple and OpenAI, alleging that the two companies are teaming up to stifle competition in the artificial intelligence market by favoring OpenAI's ChatGPT over other AI apps. The lawsuit claims that Apple's partnership with OpenAI has given the company an unfair advantage, allowing it to collect valuable data from iPhone users and potentially threatening the future of the iPhone. ([Associated Press](https://apnews.com/article/elon-musk-apple-openai-chatgpt-8cc360bd419894ad8c6bfdd79eb5693f)) <!-- Draft news summary by Leo/Llama 3.1 8B --> <!-- Possible combo link: Anthropic launches new AI agent for Chrome: https://techcrunch.com/2025/08/26/anthropic-launches-a-claude-ai-agent-that-lives-in-chrome/ -->
+- Elon Musk's xAI has filed an antitrust lawsuit against Apple and OpenAI, alleging that the two companies are teaming up to stifle competition in the artificial intelligence market by favoring OpenAI's ChatGPT over other AI apps. The lawsuit claims that Apple's partnership with OpenAI has given the company an unfair advantage, allowing it to collect valuable data from iPhone users and potentially threatening the future of the iPhone. ([Associated Press](https://apnews.com/article/elon-musk-apple-openai-chatgpt-8cc360bd419894ad8c6bfdd79eb5693f)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
 
-- USDT is coming to the Bitcoin chain. ([Cryptonews](https://cryptonews.com/news/tether-stablecoin-usdt-coming-to-bitcoin-blockchain/))
+- Tether, the world's largest digital asset company, has announced plans to launch its USDT stablecoin on RGB, a next-generation protocol for issuing digital assets on Bitcoin, allowing for private, scalable, and user-controlled issuance of assets. This move aims to make USDT a native, lightweight, private, and scalable payment option on Bitcoin, reinforcing Tether's belief in Bitcoin as the foundation of a global, decentralized financial system. ([Cryptonews](https://cryptonews.com/news/tether-stablecoin-usdt-coming-to-bitcoin-blockchain/)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
 
-- Chainlink partnering with Commerce ([Blockworks](https://blockworks.co/news/chainlink-labs-commerce)) <!-- Combo candidates: **Washington Watch:** President Trump continues to extend the deadline for a U.S. ban on TikTok, citing concerns over national security and privacy as "highly overrated" and stating that he's waiting for a buyer to finalize a deal. Despite the ongoing uncertainty, a recent Pew Research Center survey found that support for a TikTok ban has decreased, with only about one-third of Americans now in favor of banning the social media platform. ([Associated Press](https://apnews.com/article/trump-tiktok-china-extension-deadline-4a66fbd0e485db5b3da83c176f22ad11))  Draft news summary by Leo/Llama 3.1 8B  | Trump Media and Crypto.com are building a CRO treasury. https://decrypt.co/337168/morning-minute-trump-family-expands-crypto-empire-with-cro | -->
+- Chainlink has launched a new set of data feeds that deliver official U.S. Department of Commerce macroeconomic statistics directly to blockchains, expanding its role as a provider of verifiable data feeds. This integration, in collaboration with Pyth Network, makes government-released indicators such as GDP and the PCE Price Index available on-chain through decentralized oracle networks, spanning ten blockchains.([Blockworks](https://blockworks.co/news/chainlink-labs-commerce)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
 
-- **Fediverse:** If you’ve ever wanted to hop between decentralized networks without losing followers, a new tool called Bounce just made it possible. It connects Bluesky and Mastodon accounts, smoothing over one of the biggest frictions in the Fediverse. ([TechCrunch](https://techcrunch.com/2025/08/25/bounce-launches-a-service-for-moving-accounts-between-bluesky-and-mastodon/)) <!-- Draft news summary by ChatGPT -->
-
-<!--
-
-Leftovers...
-
-- Bloomberg: Biotech companies are piling into crypto treasuries.  Link TK
-
-- Gemini launches new Ripple-based card, expands Ripple USD availability. https://finance.yahoo.com/news/gemini-unveils-xrp-credit-card-163240671.html
-
-
-- Peter Thiel-backed crypto stock ETHZilla crashes: https://www.thestreet.com/crypto/investing/peter-thiel-backed-stock-soars-then-crashes-on-shocking-news
-
-- BTC "flash crash"  Link TK
-
--->
+- If you’ve ever wanted to hop between decentralized networks without losing followers, a new tool called Bounce just made it possible. It connects Bluesky and Mastodon accounts, smoothing over one of the biggest frictions in the Fediverse. ([TechCrunch](https://techcrunch.com/2025/08/25/bounce-launches-a-service-for-moving-accounts-between-bluesky-and-mastodon/)) <!-- Draft news summary by ChatGPT -->
 
 ### Market Snapshot
 
@@ -118,18 +102,17 @@ Leftovers...
 
 ### Looking Ahead
 
-- WSJ article on Euorpean competitiveness and innovation, including an eye-popping factoid related to space exploration. ([Wall Street Journal]()) <!-- Link TK -->
-
 - **A congressman in the Phillipines** has introduced a bill proposing the country build a bitcoin reserve holding 10,000 tokens. ([Cryptonews](https://finance.yahoo.com/news/philippines-proposes-massive-10-000-172644985.html))
 
 - **Startups are racing to develop new batteries** using materials like sodium and sulfur as an alternative to the dominant lithium-ion devices that power electric vehicles and other electronics. The goal is to lower costs and reduce reliance on China, which dominates the lithium-ion market. ([Reuters](https://news.google.com/read/CBMitgFBVV95cUxPT2hWaEFkZDhnQy16YjJpZFFVSklTMXNLVW51VFdDSC05OU9FYURXNUZ6Z2hNc3V2Q2h5elJQODJFemthWFJ2ZV8taV9mWVlQd3RhZFMtTEtmN2JOS0UyV21FMDRBWnl5bnVEOGUxQWJXMjBoOUozWktramt1bTlaeDdGQXZYRV9sMG9WZ3lxSzNlQUhNU0RoQ1lRMC1xNF9vZG9WS0J1RHE0SlRmZnpSN2w5MjVfdw?hl=en-US&gl=US&ceid=US%3Aen))
 
+- WSJ article on Euorpean competitiveness and innovation, including an eye-popping factoid related to space exploration. ([Wall Street Journal](https://www.wsj.com/world/europe/europe-is-losing-fe179376?st=XeCdCn&reflink=desktopwebshare_permalink))
 
 ### Odds & Ends
 
-- Fallingwater, a UNESCO World Heritage site and iconic masterpiece designed by Frank Lloyd Wright, is undergoing a $7 million renovation to replace roofs, repair walls, and restore windows, while adhering to strict historic preservation standards. The project aims to eliminate water infiltration challenges and preserve the home's delicate ecosystem, with renovations scheduled to be completed by spring 2026. ([Washington Post](https://www.washingtonpost.com/home/2025/08/25/fallingwater-renovation-project-leaking/)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
+- Fallingwater, a UNESCO World Heritage site and iconic masterpiece designed by Frank Lloyd Wright, is undergoing a $7 million renovation to replace roofs, repair walls, and restore windows, while adhering to strict historic preservation standards. The project aims to eliminate water infiltration challenges and preserve the home's delicate ecosystem, with renovations scheduled to be completed by spring 2026. ([Washington Post](https://wapo.st/4mJ4XeM)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
 
-- George Herman Ruth arrested for using baseball legends' names in fraud scheme. ([New York Post](https://nypost.com/2025/08/26/sports/babe-ruth-arrested-for-using-baseball-legends-names-in-fraud-scheme/))
+- A 69-year-old man named George Herman Ruth, who shares the same name as baseball legend Babe Ruth, has been charged with 91 counts of mail fraud, identity theft, and other crimes in Tennessee. He allegedly used the names of hundreds of deceased or retired baseball players to submit fraudulent claims for payouts in class action settlements, obtaining over $550,000 through the scheme. ([New York Post](https://nypost.com/2025/08/26/sports/babe-ruth-arrested-for-using-baseball-legends-names-in-fraud-scheme/)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to know more about w3w's history and (ahem) the author, that info is available [here](https://w3wnews.substack.com/about).**_
 
